clusters/my-cluster/infrastucture/longhorn/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: longhorn-lb
spec:
  ports:
    - port: 80
  selector:
    app: longhorn-ui
  type: LoadBalancer
