clusters/my-cluster/infrastucture/longhorn/ingress-to-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-front
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
    - host: komplikter.servehttp.com
      http:
        paths:
          - path: /lg
            pathType: Prefix
            backend:
              service: 
                name: longhorn-frontend
                port:
                  number: 80
