clusters/my-cluster/infrastucture/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-to-front
  namespace: longhorn-system
  # annotations:
    # cert-manager.io/issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: komplikter-lg.servehttp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
